<?xml version="1.0" encoding="utf-8"?>
<android.support.wearable.view.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="15dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="15dp"
    tools:context="ruby.trialappv2.SenseActivity"
    tools:deviceIds="wear">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onStartClick"
            android:text="@string/start"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Wearable.Large"
            android:textColor="@color/ambient_mode_text"
            android:textStyle="normal|bold" />

        <Button
            android:id="@+id/btn2"
            style="@android:style/Widget.Button.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onStopClick"
            android:text="@string/stop"
            android:textAppearance="@style/TextAppearance.Wearable.Large" />

        <Button
            android:id="@+id/btn3"
            style="@android:style/Widget.Button.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onFinishClick"
            android:text="@string/finish"
            android:textAppearance="@style/TextAppearance.Wearable.Large" />
    </LinearLayout>

</android.support.wearable.view.BoxInsetLayout>
